addes portfolio skeleton, labs page, about me page, and started making labs look good

--- a/labs/lab2/lab2_5.html
+++ b/labs/lab2/lab2_5.html
@@ -2,13 +2,12 @@
 <html>
 	<head>
 		<meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
-		<title>Lab 2</title>
-		<script src="lab2.js"></script>
+		<title>Lab 2.5</title>
 		<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body onload="displayList()">
-		<h1>Lab 2</h1>
+		<h1>Lab 2.5</h1>
 		<div id="menu">
 			<h3>HOME</h3>
 			<h3>ABOUT</h3>
@@ -16,18 +15,6 @@
 			<h3>SOME STUFF</h3>
 		</div>
 		<div id="content">
-			<h2>RWD:</h2>
-			<p>
-				-> Responsive Web Design aims at making each webpage feel like it was design for the support used to see it through.
-				It is used to properly scale web elements such as texts, images, videos, etc... according to the screen or window size.
-				Before RWD, webpages were designed for typical computer screen size and everything had a fixed scale.
-			</p>
-			<P>
-				-> CSS helps building responsive websites by allowing the designer to decide the sizes and styles of every element on page, and particularly to use scaling not in pixels but in percentage of width, height, etc... thus making elements responsive to window size.
-			</p>
-			<p>
-				-> em based sizing sizes according to text size, meaning that sizing a margin with em will make the margin somewhat proportionnal to text size, making the text more readable.
-			</p>
 			<h2>RWD in practice:</h2>
 			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
 			<h2>HOW TO DO RESPONSIVE WEB DESIGN</h2>
@@ -38,15 +25,6 @@
   			<img id="trumpImage" src="http://static6.businessinsider.com/image/55918b77ecad04a3465a0a63/nbc-fires-donald-trump-after-he-calls-mexicans-rapists-and-drug-runners.jpg" alt="Trump">
 				<figcaption>Fig1. - The bigot king.</figcaption>
 			</figure>
-			<h2>Person List:</h2>
-			<div id="listDiv">
-				<p>Add someone
-					<input type="text" id="fPerson" value=""></input>
-					<button id="addButt" onclick="addPerson();">Add</button>
-				</p>
-				<h3>Persons</h3>
-				<p id="personList"></p>
-			</div>
 		</div>
 	</body>
 </html>
