Added up to lab4

--- a/labs.html
+++ b/labs.html
@@ -62,7 +62,7 @@
               <tr>
                 <td>24.1.2016</td>
                 <td><a href="labs/lab3.html">Lab 3</a></td>
-                <td></td>
+                <td>About WebSockets and Audio/Video elements.</td>
                 <td class="success">Easy</td>
               </tr>
               <tr>
