--- a/labs/lab3.html
+++ b/labs/lab3.html
@@ -34,27 +34,15 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1>Lab 2</h1>
-		<div>
-			<h2>1. RWD:</h2>
-			<p>
-				<li>Responsive Web Design aims at making each webpage feel like it was design for the support used to see it through.
-				It is used to properly scale web elements such as texts, images, videos, etc... according to the screen or window size.
-				Before RWD, webpages were designed for typical computer screen size and everything had a fixed scale.</li>
-			</p>
-			<P>
-				<li>CSS helps building responsive websites by allowing the designer to decide the sizes and styles of every element on page, and particularly to use scaling not in pixels but in percentage of width, height, etc... thus making elements responsive to window size.</li>
-			</p>
-			<p>
-				<li>Em based sizing sizes according to text size, meaning that sizing a margin with em will make the margin somewhat proportionnal to text size, making the text more readable.</li>
-			</p>
-			<h2>3. RWD in practice:</h2>
-			<p><a href="lab2/lab2_3.html">Simple responsive page</a></p>
-			<h2>5. Adding stuff:</h2>
-			<p><a href="lab2/lab2_5.html">Simple responsive page with menu</a></p>
-			<h2>6. Person List:</h2>
-			<p><a href="lab2/lab2_6.html">responsive Person's list</a></p>
-		</div>
+		<h1>Lab 3</h1>
+		<h2>1. Web Sockets</h2>
+		<p><a href="lab3/lab3_1.html">Link to chatroom</a></p>
+		<h2>2. Local Storage</h2>
+		<p><a href="lab3/lab3_2.html">Person's List with local storage</a></p>
+		<h2>3. Audio Element</h2>
+		<p><a href="lab3/lab3_3.html">Link to Audio player</a></p>
+		<h2>4. Video element</h2>
+		<p><a href="lab3/lab3_4.html">Link to Video element</a></p>
 	</div>
 	</body>
 </html>
