--- a/labs/lab3/lab3_2.html
+++ b/labs/lab3/lab3_2.html
@@ -2,14 +2,12 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Lab 5</title>
-		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="lab5.js"></script>
-		<link rel="stylesheet" href="style.css">
+		<title>Lab 3</title>
+		<script src="js/lab3.js"></script>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
-		<h1>Lab 5</h1>
-		<h2>2. jQuery</h2>
+	<body onload="displayList();">
+		<h2>2. Local Storage</h2>
 		<div id="dynamic">
 			<p>Add someone
 				<input type="text" id="fPerson" value=""></input>
@@ -18,10 +16,6 @@
 			</p>
 			<h3>Persons</h3>
 			<p id="personList"></p>
-		</div>
-		<h2>3. Ajax</h2>
-		<div id="dynamic">
-			<p id="jsonList"></p>
 		</div>
 	</body>
 </html>
