Finished the portfolio

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="#">Damien's Portfolio</a>
+	    <a class="navbar-brand">Damien's Portfolio</a>
 	  </div>
 	  <div class="navbar-collapse collapse navbar-ex1-collapse">
 	      <ul class="nav navbar-nav">
@@ -52,7 +52,7 @@
 
           <h1>Self Evaluation</h1>
 
-          <p>I have successfully done all Labs, and done a responsive portfolio that I think looks good. My code is in github at <a href="https://github.com/damsu/IMP">https://github.com/damsu/IMP</a>. I have not been helping much other studnets, since noone I sat next to required or seemed to need help. For this I would say I deserve grade 4 or 5.</p>
+          <p>I have successfully done all Labs, and done a responsive portfolio that I think looks good. My code is in github at <a href="https://github.com/damsu/IMP">https://github.com/damsu/IMP</a>. I have been helping one student in particular, explaining him few of the labs, what kind of approach he should take and giving hints.</p>
         </div>
       </div>
   </body>
