--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -34,27 +34,17 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1>Lab 2</h1>
-		<div>
-			<h2>1. RWD:</h2>
-			<p>
-				<li>Responsive Web Design aims at making each webpage feel like it was design for the support used to see it through.
-				It is used to properly scale web elements such as texts, images, videos, etc... according to the screen or window size.
-				Before RWD, webpages were designed for typical computer screen size and everything had a fixed scale.</li>
-			</p>
-			<P>
-				<li>CSS helps building responsive websites by allowing the designer to decide the sizes and styles of every element on page, and particularly to use scaling not in pixels but in percentage of width, height, etc... thus making elements responsive to window size.</li>
-			</p>
-			<p>
-				<li>Em based sizing sizes according to text size, meaning that sizing a margin with em will make the margin somewhat proportionnal to text size, making the text more readable.</li>
-			</p>
-			<h2>3. RWD in practice:</h2>
-			<p><a href="lab2/lab2_3.html">Simple responsive page</a></p>
-			<h2>5. Adding stuff:</h2>
-			<p><a href="lab2/lab2_5.html">Simple responsive page with menu</a></p>
-			<h2>6. Person List:</h2>
-			<p><a href="lab2/lab2_6.html">responsive Person's list</a></p>
-		</div>
+		<h1>Lab 5</h1>
+		<h2>1. About jQuery</h2>
+		<p><li>jQuery allows the developper to simplify, speed-up and extend the use of javascript. You can select and manipulate DOM elements easier, handle animations as well as Ajax requests.</li></p>
+		<p><li>It helps the developper to achieve better results in a quicker time (usually reduce by a lot the amount of code needed to do something).</li></p>
+		<p><li>The main issue with Persons List that jquery would help solve is selecting and appending content within the DOM element of the list.</li></p>
+		<p><li>CDNs are Content Delivery Networks. They cover a large spectrum of content delivery services but in the case of jQuery, a CDN will provide a link the libraries that the developper can just add, instead of downloading the libray.</li></p>
+		<p><li>It helps mainly because it saves the hassle of downloading and saving the library in the project, also because it's fast and reliable, and it is fairy easy to just add/remove links, to try different versions, different frameworks, libraries, etc...</li></p>
+		<h2>2. More jQuery</h2>
+		<p><a href="lab5/lab5_2.html">Link to Persons List using jQuery</a></p>
+		<h2>3. Ajax</h2>
+		<p><a href="lab5/lab5_3.html">Link to Persons List using Ajax (and persons.jon)</a></p>
 	</div>
 	</body>
 </html>
