--- a/labs/lab2/lab2_5.html
+++ b/labs/lab2/lab2_5.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body onload="displayList()">
+	<body>
 		<h1>Lab 2.5</h1>
 		<div id="menu">
 			<h3>HOME</h3>
