--- a/labs/lab4.html
+++ b/labs/lab4.html
@@ -17,7 +17,7 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="#">Damien's Portfolio</a>
+	    <a class="navbar-brand">Damien's Portfolio</a>
 	  </div>
 	  <div class="navbar-collapse collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav">
