--- a/labs/lab4/lab4_2.html
+++ b/labs/lab4/lab4_2.html
@@ -9,7 +9,6 @@
 	<body onload="loadGameCanvas();">
 		<h2>2. Little Game</h2>
 		<canvas id="game" width="500" height="300" style="border:1px solid #ffffff; background-color: #ffffff"></canvas>
-		<button id="playButt">Play</button>
-		<h2>Score = <span id="score"></span> --- Time = <span id="time"></span></h2>
+		<h2><span id="score">Star the game by clicking the canvas !</span><span id="time"></span></h2>
 	</body>
 </html>
